2005-09-20  Frederic Ruaudel <grumz@grumz.net> 0.8

	* plugin/nautilus-actions-config.c:
	* plugin/nautilus-actions-config.h:
	* plugin/nautilus-actions-test.c:
	* plugin/nautilus-actions-utils.c:
	* plugin/nautilus-actions-utils.h:
	* plugin/nautilus-actions.h: 
	* plugin/nautilus-actions.c: Add GConf support (Feature #44) and
remove unused code. Border side effect : almost no more compilation warnings

	* config/config_newaction.schemas.in.in: Add version information
to manage future config changement and add missing list_type element
for basename and scheme key.

	* plugin/nautilus-actions.c:
	* plugin/nautilus-actions.h: Initialized NautilusActions GObject
and move all data initialization into it.

	* configure.in: Add prerequisite for GConf

2005-09-19  Frederic Ruaudel <grumz@grumz.net> 0.8

	* nact/Makefile.am: Remove the suppression of nact.desktop.in as
it is no more autogenerated.
	
	* po/README_TRANSLATORS: Add some information for translators

	* po/*.po:
	* po/nautilus-actions.pot: Update translations strings

	* configure.in:
	* config/Makefile.am:
	* po/POTFILES.in:
	* config/config_newaction.schemas.in.in: Add the GConf schemas for
the new action config and configure it with i18n support.

2005-09-17  Frederic Ruaudel <grumz@grumz.net> 0.8

	* plugin/nautilus-actions.c: 
	* plugin/nautilus-actions.h: Start migration of extensions data
into the NautilusActions GObject.

	* nact/nautilus-actions-config.glade: 
	* nact/nautilus-actions-config.in: Fix alignment problem in NACT
interface (Bug #105).

	* po/*.po:
	* po/nautilus-actions.pot: Update translations strings

	* po/POTFILES.in: Rename nact/nact.desktop.in.in into
nact/nact.desktop.in because there is no need anymore for autotool var
expansion

	* configure.in: Remove the generation of nact/nact.desktop.in
because there is no need anymore for autotool var expansion

	* nact/nact.desktop.in.in:
	* nact/nact.desktop.in: Rename nact/nact.desktop.in.in into 